<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_30"
            android:src="@drawable/icon_gift" />

        <TextView
            android:id="@+id/demo_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_40"
            android:gravity="center"
            android:text="@string/demo_content"
            android:textColor="@color/gray_666666"
            android:textSize="@dimen/text_20" />

        <EditText
            android:id="@+id/demo_edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_20"
            android:background="@drawable/bg_edit"
            android:hint="@string/demo_phone_hint"
            android:inputType="phone"
            android:padding="@dimen/margin_10"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_666666"
            android:textSize="@dimen/text_16" />

        <Button
            android:id="@+id/demo_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:text="@string/demo_btn"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16" />

        <RelativeLayout
            android:id="@+id/demo_result_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/bg_gift"
            android:visibility="gone">

            <TextView
                android:id="@+id/demo_gift_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_25"
                android:text="@string/demo_gift_money"
                android:textColor="@color/pink_btn_normal"
                android:textSize="@dimen/text_20" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_35"
                android:layout_toRightOf="@+id/demo_gift_money"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_gift"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/text_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_3"
                    android:text="@string/demo_gift_time"
                    android:textColor="@color/gray_666666"
                    android:textSize="@dimen/text_14" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

